# OpenGL-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
res/shaders/: cube.fs  cube.vs
src/: Ares.h
src/Core/: Component.h  Engine.cpp  Engine.h  EntryPoint.cpp  GameObject.cpp  GameObject.h  Mesh.h  Transform.cpp  Transform.h
src/Core/Components/: Component.h  Mesh.h  Transform.cpp  Transform.h
src/Core/Graphics/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/Core/Graphics/Buffers/: VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Core/IO/: Input.cpp  Input.h  Window.cpp  Window.h
src/Core/Utils/: Debug.cpp  Debug.h
